<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="error_player">There was an error initializing the YouTubePlayer (%1$s)</string>
    <string name="app_name">FunnyBox</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
	<string name="menu_picture">18+</string>
	<string name="menu_game">Game 18+</string>
	<string name="menu_video">Phim 18+</string>
	<string name="menu_news">Hot News</string>
	<string name="menu_funny">Ảnh Hài Hước</string>
	<string name="clear_cache_menu">Clear Caches</string>
    <string name="clear_cache_complete_toast">Caches have been cleared</string>
    <string name="imageview_description">Image Thumbnail</string>
    <string name="no_network_connection_toast">No network connection found</string>
    <string name="text">Thái An kể, trưa ngày 29/3, An đi xe máy từ trường trên đường Võ Văn Ngân, quận Thủ Đức, về nhà chị ruột ở phường Tăng Nhơn Phú B, quận 9. Trong lúc đang chạy trên đường Đỗ Xuân Hợp, An dừng xe nghe điện thoại rồi sao đó nhét chiếc điện thoại iPhone 4S vào túi áo khoác và đi tiếp.

Đến trước số nhà 246, phường Phước Long A, bất ngờ từ phía sau xuất hiện 2 thanh niên ép sát, giật chiếc điện thoại trong túi An rồi tẩu thoát về hướng chợ Phước Bình. Nạn nhân truy hô cướp và tăng ga đuổi theo 2 đối tượng.

Cuộc rượt đuổi diễn ra qua nhiều km, đến gần khu dân cư Nam Hòa (phường Phước Long A) thì An lao xe vào xe bọn cướp khiến cả 3 đều té xuống đường. Lúc này tên cướp điều khiển xe nhanh chóng bỏ chạy bộ thoát thân, tên còn lại chưa kịp vùng dậy đã bị An nhào đến đè đầu, nắm tóc khống chế.

Được sự hỗ trợ của 2 thanh niên đi đường, tên cướp lúc này bị gãy chân trái cùng chiếc xe gây án và tang vật được dẫn giải về giao cho công an địa phương.

Sau khi được đưa đến bệnh viện băng bó phần chân bị gãy, đối tượng đã được đưa về Đội cảnh sát điều tra Công an quận 9. Tại đây đối tượng bị bắt tên Phạm Quang Minh Đức (21 tuổi) đã khai nhận thêm 3 đồng bọn (đều ngụ phường Trường Thọ, quận Thủ Đức) cùng tham gia cướp và cản địa khi bị truy đuổi.

Đến khuya cùng ngày, lần lượt các tên Trần Quốc Duy (23 tuổi), Mai Sơn Vũ (16 tuổi) và một đối tượng (chưa được cung cấp danh tính) đã đến công an địa phương đầu thú.

Sau khi vụ việc xảy ra, Thái An cũng bị xây xước khắp cơ thể và chấn thương phần mềm. Hiện An được chị gái đưa đi học mỗi ngày.

Ông Nguyễn Văn Truyền, cha ruột An từ Đà Lạt xuống thăm con, chia sẻ: “Tôi cũng không thể ngờ con gái mình lại gan dạ như vậy!”.

Hỏi An, nếu chứng kiến một vụ cướp trên đường mà mình không phải là nạn nhân, An có sẵn sang tham gia truy bắt? Cô nữ sinh trả lời quả quyết: “Sẵn sàng, vì bản thân tôi vô cùng căm phẫn những thành phần trộm cướp tài sản của người khác mà không chịu làm ăn lương thiện”.

Được biết, Cơ quan CSĐT Công an quận 9 đã thực hiện lệnh bắt khẩn cấp 4 đối tượng cướp giật nói trên để điều tra, xử lý về hành vi cướp giật tài sản.

Thái An kể, trưa ngày 29/3, An đi xe máy từ trường trên đường Võ Văn Ngân, quận Thủ Đức, về nhà chị ruột ở phường Tăng Nhơn Phú B, quận 9. Trong lúc đang chạy trên đường Đỗ Xuân Hợp, An dừng xe nghe điện thoại rồi sao đó nhét chiếc điện thoại iPhone 4S vào túi áo khoác và đi tiếp.

Đến trước số nhà 246, phường Phước Long A, bất ngờ từ phía sau xuất hiện 2 thanh niên ép sát, giật chiếc điện thoại trong túi An rồi tẩu thoát về hướng chợ Phước Bình. Nạn nhân truy hô cướp và tăng ga đuổi theo 2 đối tượng.

Cuộc rượt đuổi diễn ra qua nhiều km, đến gần khu dân cư Nam Hòa (phường Phước Long A) thì An lao xe vào xe bọn cướp khiến cả 3 đều té xuống đường. Lúc này tên cướp điều khiển xe nhanh chóng bỏ chạy bộ thoát thân, tên còn lại chưa kịp vùng dậy đã bị An nhào đến đè đầu, nắm tóc khống chế.

Được sự hỗ trợ của 2 thanh niên đi đường, tên cướp lúc này bị gãy chân trái cùng chiếc xe gây án và tang vật được dẫn giải về giao cho công an địa phương.

Sau khi được đưa đến bệnh viện băng bó phần chân bị gãy, đối tượng đã được đưa về Đội cảnh sát điều tra Công an quận 9. Tại đây đối tượng bị bắt tên Phạm Quang Minh Đức (21 tuổi) đã khai nhận thêm 3 đồng bọn (đều ngụ phường Trường Thọ, quận Thủ Đức) cùng tham gia cướp và cản địa khi bị truy đuổi.

Đến khuya cùng ngày, lần lượt các tên Trần Quốc Duy (23 tuổi), Mai Sơn Vũ (16 tuổi) và một đối tượng (chưa được cung cấp danh tính) đã đến công an địa phương đầu thú.

Sau khi vụ việc xảy ra, Thái An cũng bị xây xước khắp cơ thể và chấn thương phần mềm. Hiện An được chị gái đưa đi học mỗi ngày.

Ông Nguyễn Văn Truyền, cha ruột An từ Đà Lạt xuống thăm con, chia sẻ: “Tôi cũng không thể ngờ con gái mình lại gan dạ như vậy!”.

Hỏi An, nếu chứng kiến một vụ cướp trên đường mà mình không phải là nạn nhân, An có sẵn sang tham gia truy bắt? Cô nữ sinh trả lời quả quyết: “Sẵn sàng, vì bản thân tôi vô cùng căm phẫn những thành phần trộm cướp tài sản của người khác mà không chịu làm ăn lương thiện”.

Được biết, Cơ quan CSĐT Công an quận 9 đã thực hiện lệnh bắt khẩn cấp 4 đối tượng cướp giật nói trên để điều tra, xử lý về hành vi cướp giật tài sản.
Thái An kể, trưa ngày 29/3, An đi xe máy từ trường trên đường Võ Văn Ngân, quận Thủ Đức, về nhà chị ruột ở phường Tăng Nhơn Phú B, quận 9. Trong lúc đang chạy trên đường Đỗ Xuân Hợp, An dừng xe nghe điện thoại rồi sao đó nhét chiếc điện thoại iPhone 4S vào túi áo khoác và đi tiếp.

Đến trước số nhà 246, phường Phước Long A, bất ngờ từ phía sau xuất hiện 2 thanh niên ép sát, giật chiếc điện thoại trong túi An rồi tẩu thoát về hướng chợ Phước Bình. Nạn nhân truy hô cướp và tăng ga đuổi theo 2 đối tượng.

Cuộc rượt đuổi diễn ra qua nhiều km, đến gần khu dân cư Nam Hòa (phường Phước Long A) thì An lao xe vào xe bọn cướp khiến cả 3 đều té xuống đường. Lúc này tên cướp điều khiển xe nhanh chóng bỏ chạy bộ thoát thân, tên còn lại chưa kịp vùng dậy đã bị An nhào đến đè đầu, nắm tóc khống chế.

Được sự hỗ trợ của 2 thanh niên đi đường, tên cướp lúc này bị gãy chân trái cùng chiếc xe gây án và tang vật được dẫn giải về giao cho công an địa phương.

Sau khi được đưa đến bệnh viện băng bó phần chân bị gãy, đối tượng đã được đưa về Đội cảnh sát điều tra Công an quận 9. Tại đây đối tượng bị bắt tên Phạm Quang Minh Đức (21 tuổi) đã khai nhận thêm 3 đồng bọn (đều ngụ phường Trường Thọ, quận Thủ Đức) cùng tham gia cướp và cản địa khi bị truy đuổi.

Đến khuya cùng ngày, lần lượt các tên Trần Quốc Duy (23 tuổi), Mai Sơn Vũ (16 tuổi) và một đối tượng (chưa được cung cấp danh tính) đã đến công an địa phương đầu thú.

Sau khi vụ việc xảy ra, Thái An cũng bị xây xước khắp cơ thể và chấn thương phần mềm. Hiện An được chị gái đưa đi học mỗi ngày.

Ông Nguyễn Văn Truyền, cha ruột An từ Đà Lạt xuống thăm con, chia sẻ: “Tôi cũng không thể ngờ con gái mình lại gan dạ như vậy!”.

Hỏi An, nếu chứng kiến một vụ cướp trên đường mà mình không phải là nạn nhân, An có sẵn sang tham gia truy bắt? Cô nữ sinh trả lời quả quyết: “Sẵn sàng, vì bản thân tôi vô cùng căm phẫn những thành phần trộm cướp tài sản của người khác mà không chịu làm ăn lương thiện”.

Được biết, Cơ quan CSĐT Công an quận 9 đã thực hiện lệnh bắt khẩn cấp 4 đối tượng cướp giật nói trên để điều tra, xử lý về hành vi cướp giật tài sản.
Thái An kể, trưa ngày 29/3, An đi xe máy từ trường trên đường Võ Văn Ngân, quận Thủ Đức, về nhà chị ruột ở phường Tăng Nhơn Phú B, quận 9. Trong lúc đang chạy trên đường Đỗ Xuân Hợp, An dừng xe nghe điện thoại rồi sao đó nhét chiếc điện thoại iPhone 4S vào túi áo khoác và đi tiếp.

Đến trước số nhà 246, phường Phước Long A, bất ngờ từ phía sau xuất hiện 2 thanh niên ép sát, giật chiếc điện thoại trong túi An rồi tẩu thoát về hướng chợ Phước Bình. Nạn nhân truy hô cướp và tăng ga đuổi theo 2 đối tượng.

Cuộc rượt đuổi diễn ra qua nhiều km, đến gần khu dân cư Nam Hòa (phường Phước Long A) thì An lao xe vào xe bọn cướp khiến cả 3 đều té xuống đường. Lúc này tên cướp điều khiển xe nhanh chóng bỏ chạy bộ thoát thân, tên còn lại chưa kịp vùng dậy đã bị An nhào đến đè đầu, nắm tóc khống chế.

Được sự hỗ trợ của 2 thanh niên đi đường, tên cướp lúc này bị gãy chân trái cùng chiếc xe gây án và tang vật được dẫn giải về giao cho công an địa phương.

Sau khi được đưa đến bệnh viện băng bó phần chân bị gãy, đối tượng đã được đưa về Đội cảnh sát điều tra Công an quận 9. Tại đây đối tượng bị bắt tên Phạm Quang Minh Đức (21 tuổi) đã khai nhận thêm 3 đồng bọn (đều ngụ phường Trường Thọ, quận Thủ Đức) cùng tham gia cướp và cản địa khi bị truy đuổi.

Đến khuya cùng ngày, lần lượt các tên Trần Quốc Duy (23 tuổi), Mai Sơn Vũ (16 tuổi) và một đối tượng (chưa được cung cấp danh tính) đã đến công an địa phương đầu thú.

Sau khi vụ việc xảy ra, Thái An cũng bị xây xước khắp cơ thể và chấn thương phần mềm. Hiện An được chị gái đưa đi học mỗi ngày.

Ông Nguyễn Văn Truyền, cha ruột An từ Đà Lạt xuống thăm con, chia sẻ: “Tôi cũng không thể ngờ con gái mình lại gan dạ như vậy!”.

Hỏi An, nếu chứng kiến một vụ cướp trên đường mà mình không phải là nạn nhân, An có sẵn sang tham gia truy bắt? Cô nữ sinh trả lời quả quyết: “Sẵn sàng, vì bản thân tôi vô cùng căm phẫn những thành phần trộm cướp tài sản của người khác mà không chịu làm ăn lương thiện”.

Được biết, Cơ quan CSĐT Công an quận 9 đã thực hiện lệnh bắt khẩn cấp 4 đối tượng cướp giật nói trên để điều tra, xử lý về hành vi cướp giật tài sản.
</string>
</resources>